--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,2 +1,9 @@
 <h1>About#index</h1>
 <p>Find me in app/views/about/index.html.erb</p>
+
+<h1>About Me: Joal</h1>
+<ul>
+    <li>Fact 1</li>
+    <li>Fact 2</li>
+    <li>Fact 3</li>
+</ul>
